[package]
name = "object-store-wasm"
version = "0.1.0"
authors = ["Nicholas Roberts <nicholas.roberts.au@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
http = []
js_binding = []
default = ["console_error_panic_hook", "http", "js_binding"]

[dependencies]
wasm-bindgen = "0.2.90"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
reqwest = { version = "^0.11.22", optional = false, default-features = false, features = [ "stream" ] }
wasm-streams = "0.4.0"
js-sys = "0.3.68"
web-sys = "0.3.68"
chrono = "0.4.34"
snafu = "0.7.5"
backon = "0.4.1"
async-trait = "0.1.74"
url = "2.5.0"

tokio = { version = "1.34.0", default-features = false }
object_store = "0.9.0"
bytes = { version = "1" }

wasm-bindgen-futures = { version = "0.4.30" }
futures = { version = "0.3" }
[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
