[package]
name = "object-store-wasm"
version = "0.0.5"
authors = ["Nicholas Roberts <nicholas.roberts.au@gmail.com>"]
edition = "2021"
description = "WebAssembly object_store implementation"
readme = "README.md"
repository = "https://github.com/H-Plus-Time/object-store-wasm"
license = "MIT OR Apache-2.0"
keywords = ["webassembly"]
categories = ["wasm"]
rust-version = "1.62"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
http = []
aws = [
    "dep:aws-config",
    "dep:aws-credential-types",
    "dep:aws-sdk-s3",
    "dep:aws-smithy-async",
    "dep:aws-smithy-http",
    "dep:aws-smithy-types",
    "dep:aws-types",
    "dep:thiserror",
    "dep:itertools",
    "dep:tower",
    "dep:http",
    "dep:wasm-timer",
]
js_binding = []
default = ["console_error_panic_hook", "http", "js_binding"]

[dependencies]
wasm-bindgen = "0.2.90"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
reqwest = { version = "^0.11.22", optional = false, default-features = false, features = [
    "stream",
] }
wasm-streams = "0.4.0"
js-sys = "0.3.68"
web-sys = "0.3.68"
chrono = { version = "0.4.34", features = ["wasmbind"] }
snafu = "0.7.5"
backon = "0.4.1"
async-trait = "0.1.74"
url = "2.5.0"
aws-config = { version = "0.56.1", default-features = false, optional = true }
aws-credential-types = { version = "0.56.1", features = [
    "hardcoded-credentials",
], optional = true }
aws-sdk-s3 = { version = "0.31.1", default-features = false, optional = true }
aws-smithy-async = { version = "0.56.1", optional = true }
aws-smithy-http = { version = "0.56.1", features = [
    "event-stream",
], optional = true }
aws-smithy-types = { version = "0.56.1", optional = true }
aws-types = { version = "0.56.1", default-features = false, optional = true }
thiserror = { version = "1", optional = true }
itertools = { version = "0.12.1", optional = true }
tower = { version = "0.4", optional = true }
http = { version = "0.2", optional = true }
wasm-timer = { version = "0.2", optional = true }
tokio = { version = "1.34.0", default-features = false }
object_store = "0.10.0"
bytes = { version = "1" }

wasm-bindgen-futures = { version = "0.4.30" }
futures = { version = "0.3" }
serde-wasm-bindgen = "0.6.5"
serde = { version = "1.0.197", features = ["derive"] }
[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
