[package]
name = "object-store-wasm"
version = "0.0.7"
authors = ["Nicholas Roberts <nicholas.roberts.au@gmail.com>"]
edition = "2021"
description = "WebAssembly object_store implementation"
readme = "README.md"
repository = "https://github.com/H-Plus-Time/object-store-wasm"
license = "MIT OR Apache-2.0"
keywords = ["webassembly"]
categories = ["wasm"]
rust-version = "1.62"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
http = ["object_store/http"]
aws = ["object_store/aws"]
gcp = ["object_store/gcp", "dep:ring"]
azure = ["object_store/azure"]
js_binding = []
full = ["aws", "gcp", "azure", "http"]
debug = ["console_error_panic_hook"]
default = ["js_binding", "http"]

[dependencies]
wasm-bindgen = "0.2.90"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
wasm-streams = "0.4.0"
js-sys = "0.3.68"
web-sys = { version = "0.3.77", features = ["console"] }
chrono = { version = "0.4.40", features = ["wasmbind"] }
url = "2.5.0"
object_store = { git = "https://github.com/apache/arrow-rs-object-store", rev = "8d3d8319dbaae7c07d7bd52339a0d0cca033e9ac", default-features = false }
# object_store = "0.12.0"

wasm-bindgen-futures = { version = "0.4.30" }
futures = { version = "0.3" }
serde-wasm-bindgen = "0.6.5"

ring = { version = "*", optional = true, features = ["wasm32_unknown_unknown_js"]}

[dependencies.getrandom_v03]
package = "getrandom"
version = "0.3"
features = ["wasm_js"]

[dependencies.getrandom_v02]
package = "getrandom"
version = "0.2"
features = ["js"]

[dev-dependencies]
wasm-bindgen-test = "0.3.50"

[package.metadata.cargo-all-features]
denylist = ["full", "default"]

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
